--- a/gradle.properties
+++ b/gradle.properties
@@ -3,14 +3,17 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-	minecraft_version=1.18.2
-	yarn_mappings=1.18.2+build.3
-	loader_version=0.14.6
+minecraft_version=1.19-rc2
+yarn_mappings=1.19-rc2+build.1
+loader_version=0.14.6
+
+#Fabric api
+
 
 # Mod Properties
 	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	maven_group = de.greenman999
+	archives_base_name = 1.19-fullbright
 
 # Dependencies
-	fabric_version=0.53.0+1.18.2
+fabric_version=0.55.1+1.19
