Added Config Option for ModMenu

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,10 +3,13 @@ org.gradle.jvmargs=-Xmx1G
 
 # Fabric Properties
 	# check these on https://fabricmc.net/develop
-minecraft_version=1.19-rc2
-yarn_mappings=1.19-rc2+build.1
-loader_version=0.14.6
+minecraft_version=1.19
+yarn_mappings=1.19+build.4
+loader_version=0.14.8
 
+#Fabric api
+fabric_version=0.56.3+1.19
+modmenu_version=4.0.1
 #Fabric api
 
 
@@ -15,5 +18,3 @@ loader_version=0.14.6
 	maven_group = de.greenman999
 	archives_base_name = 1.19-fullbright
 
-# Dependencies
-fabric_version=0.55.1+1.19
