--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,12 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+	mavenCentral()
+	mavenLocal()
+	maven { url = "https://maven.fabricmc.net/" }
+	maven { url = "https://jitpack.io" }
+	maven { url "https://maven.terraformersmc.com/releases/" }
+	maven { url "https://maven.shedaniel.me/" }
 }
 
 dependencies {
@@ -26,6 +32,10 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
+	modApi("me.shedaniel.cloth:cloth-config-fabric:7.0.72") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
