--- a/build.gradle
+++ b/build.gradle
@@ -17,11 +17,11 @@ repositories {
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
 	mavenCentral()
-	mavenLocal()
 	maven { url = "https://maven.fabricmc.net/" }
 	maven { url = "https://jitpack.io" }
 	maven { url "https://maven.terraformersmc.com/releases/" }
-	maven { url "https://maven.shedaniel.me/" }
+	maven { url "https://maven.isxander.dev/releases"}
+	maven { url "https://oss.sonatype.org/content/repositories/snapshots"}
 }
 
 dependencies {
@@ -32,10 +32,9 @@ dependencies {
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
-	modImplementation "com.terraformersmc:modmenu:${project.modmenu_version}"
-	modApi("me.shedaniel.cloth:cloth-config-fabric:7.0.72") {
-		exclude(group: "net.fabricmc.fabric-api")
-	}
+	modApi("com.terraformersmc:modmenu:${project.modmenu_version}")
+	modImplementation 'dev.isxander.yacl:yet-another-config-lib-fabric:3.2.1+1.20.2'
+	implementation 'com.google.code.gson:gson:2.10.1'
 }
 
 processResources {
@@ -47,14 +46,10 @@ processResources {
 }
 
 tasks.withType(JavaCompile).configureEach {
-	// Minecraft 1.18 (1.18-pre2) upwards uses Java 17.
 	it.options.release = 17
 }
 
 java {
-	// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-	// if it is present.
-	// If you remove this line, sources will not be generated.
 	withSourcesJar()
 }
 
