--- a/gradle.properties
+++ b/gradle.properties
@@ -16,5 +16,5 @@ modmenu_version=8.0.0
 # Mod Properties
 	mod_version = 2.0.0
 	maven_group = de.greenman999
-	archives_base_name = 1.19-fullbright
+	archives_base_name = fullbright
 
